--- a/assets/main.scss
+++ b/assets/main.scss
@@ -3,6 +3,11 @@
 
 @import "minima";
 
+pre.highlight {
+  border-radius: 1em;
+  box-shadow: 1px 2px 6px #777;
+}
+
 .tag-list {
   padding-bottom: 5px;
 }
