Add tag list to posts index

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,7 +20,7 @@ layout: default
     <div class="tag-list">
       {% for tag in page.tags %}
         <div class="post-tag">
-          {{tag | downcase}}
+          {{ tag }}
         </div>
       {% endfor %}
     </div>
