--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,8 +3,10 @@ layout: default
 ---
 
 <div class="home">
+  <img src="assets/images/bigstick1.jpg"></img>
+
   {%- if page.title -%}
-    <h1 class="page-heading">{{ page.title }}</h1>
+    <h1 class="page-heading">{{ page.title | upcase }}</h1>
   {%- endif -%}
 
   {{ content }}
