--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="home">
-  <img src="assets/images/bigstick1.jpg"></img>
+  <!-- <img src="assets/images/bigstick1.jpg"></img> -->
 
   {%- if page.title -%}
     <h1 class="page-heading">{{ page.title | upcase }}</h1>
