--- a/assets/main.scss
+++ b/assets/main.scss
@@ -3,6 +3,31 @@
 
 @import "minima";
 
+.page-content {
+  background-image: url("/assets/images/bigstick1.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100%;
+}
+
+.wrapper {
+  min-width: 80%;
+}
+
+.home {
+  width: 100%;
+  background-color: rgba(255,255,255,0.8);
+  box-shadow: 0px 0px 15px 8px rgba(255,255,255,0.4);
+  padding: 15px;
+}
+
+.post {
+  width: 100%;
+  background-color: rgba(255,255,255,0.8);
+  box-shadow: 0px 0px 15px 8px rgba(255,255,255,0.4);
+  padding: 15px;
+}
+
 pre.highlight {
   border-radius: 1em;
   box-shadow: 1px 2px 6px #777;
