--- a/assets/main.scss
+++ b/assets/main.scss
@@ -21,6 +21,17 @@
   padding: 15px;
 }
 
+.post-title-in-list {
+  font-size: 2em;
+  color: black;
+}
+
+.post-description-in-list {
+  padding-bottom: 12px;
+  color: #606060;
+  font-style: italic;
+}
+
 .post {
   width: 100%;
   background-color: rgba(255,255,255,0.87);
