--- a/assets/main.scss
+++ b/assets/main.scss
@@ -27,9 +27,12 @@
 }
 
 .post-description-in-list {
-  padding-bottom: 12px;
   color: #606060;
   font-style: italic;
+}
+
+.post-list-spacer {
+  padding-bottom: 16px;
 }
 
 .post {
