--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -17,11 +17,9 @@ layout: default
       {%- for post in site.posts -%}
       <li>
         {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-        <span class="post-meta">
-          <div class="post-meta-item post-date">
-            {{ post.date | date: date_format }}
-          </div>
-        </span>
+        <div class="post-date">
+          {{ post.date | date: date_format }}
+        </div>
         <div class="post-title-in-list">
           <a class="post-link" href="{{ post.url | relative_url }}">
             {{ post.title | escape }}
@@ -35,7 +33,7 @@ layout: default
         {%- if site.show_excerpts -%}
           {{ post.excerpt }}
         {%- endif -%}
-        <div class="tag-list post-meta-item">
+        <div class="tag-list">
           {% for tag in post.tags %}
             <div class="post-tag">
               {{ tag }}
