--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,12 +7,13 @@
 
     {%- include header.html -%}
 
-    <main class="page-content" aria-label="Content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
-    </main>
-
+    <div class="page-background">
+      <main class="page-content" aria-label="Content">
+        <div class="wrapper">
+          {{ content }}
+        </div>
+      </main>
+    </div>
     {%- include footer.html -%}
 
   </body>
