--- a/assets/main.scss
+++ b/assets/main.scss
@@ -3,11 +3,15 @@
 
 @import "minima";
 
-.page-content {
+.page-background {
   background-image: url("/assets/images/bigstick1.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: 100%;
+}
+
+.page-content {
+  background-color: rgba(0,0,0,0.4);
 }
 
 .wrapper {
@@ -17,7 +21,7 @@
 .home {
   width: 100%;
   background-color: rgba(255,255,255,0.87);
-  box-shadow: 0px 0px 8px 2px rgba(255,255,255,0.4);
+  box-shadow: 0px 0px 8px 2px rgba(255,255,255,0.6);
   padding: 15px;
 }
 
@@ -41,7 +45,7 @@
 .post {
   width: 100%;
   background-color: rgba(255,255,255,0.87);
-  box-shadow: 0px 0px 8px 2px rgba(255,255,255,0.4);
+  box-shadow: 0px 0px 5px 2px rgba(255,255,255,0.6);
   padding: 15px;
 }
 
