Add subtle whitebox opacity transition

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div class="home">
+<div class="home whitebox">
   <!-- <img src="assets/images/bigstick1.jpg"></img> -->
 
   {%- if page.title -%}
