--- a/assets/main.scss
+++ b/assets/main.scss
@@ -53,11 +53,13 @@
 pre.highlight {
   border-radius: 1em;
   box-shadow: 1px 2px 6px #777;
+  background-color: rgb(238, 238, 255);
 }
 
 code {
   border-radius: 0.25em;
-  box-shadow: 0.5px 1px 2px #777a;
+  box-shadow: 0.5px 1px 1px #7778;
+  background-color: rgb(238, 238, 255);
 }
 
 pre code {
@@ -75,9 +77,10 @@ pre code {
 
 .post-tag {
   font-size: 0.85em;
-  background-color: #cce;
+  background-color: rgb(238, 238, 255);
   color: #000;
-  border-radius: 0.3em;
+  border-radius: 0.25em;
+  box-shadow: 1px 2px 3px #7778;
   display: inline;
   padding: 2px 4px 2px 4px;
   margin-right: 3px;
