--- a/assets/main.scss
+++ b/assets/main.scss
@@ -66,6 +66,51 @@ pre code {
   box-shadow: none;
 }
 
+code span.added {
+  color: #395;
+}
+
+code span.modified {
+  color: #aa3;
+}
+
+code span.unmodified {
+  color: #aaa;
+}
+
+code span.inline-value {
+  color: #a63;
+}
+
+.output {
+  font-family: monospace;
+  background: #bbb8;
+  padding: 0.3em;
+  margin-bottom: 1em;
+  white-space: pre;
+  overflow-x: scroll;
+}
+
+.skip-link {
+  font-size: small;
+  a {
+    color: #777;
+    &:hover {
+      color: #347;
+    }
+  }
+}
+
+.filename {
+  text-decoration: underline;
+}
+
+.resource-name {
+  font-family: monospace;
+  color: #844;
+  background-color: rgba(0,0,0,0.1);
+}
+
 .post-date {
   margin-right: 10px;
   color: #555;
