--- a/assets/main.scss
+++ b/assets/main.scss
@@ -89,6 +89,7 @@ code span.inline-value {
   margin-bottom: 1em;
   white-space: pre;
   overflow-x: scroll;
+  box-shadow: inset 1px 2px 3px #0008;
 }
 
 .skip-link {
