--- a/assets/main.scss
+++ b/assets/main.scss
@@ -41,6 +41,12 @@
   }
 }
 
+.post-description {
+  font-size: 1em;
+  font-style: italic;
+  color: #444;
+}
+
 .post-description-in-list {
   color: #606060;
   font-style: italic;
