style: image border and such

--- a/_includes/post_image.html
+++ b/_includes/post_image.html
@@ -1,4 +1,5 @@
 <img
+  class="post-image"
   src="{{site.url}}/assets/images/posts/{{page.id | slugify}}/{{include.name}}"
   style="width: {{include.width}};"
   alt="{{include.alt}}"
