Image header, some major style overhaul

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -182,7 +182,9 @@ pre {
   margin-left: auto;
   padding-right: $spacing-unit / 2;
   padding-left: $spacing-unit / 2;
-  @extend %clearfix;
+  display: flex;
+  justify-content: center;
+  // @extend %clearfix;
 
   @media screen and (min-width: $on-large) {
     max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit} * 2));
