--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -1,3 +1,142 @@
 .headspace {
-  height: 200px;
+  height: 500px;
+}
+
+.head-image {
+  border-radius: 15px;
+  background-image: url("/assets/images/bigstick-dark.jpg");
+  background-size: cover;
+  color: #fefefe;
+  // background-position: center;
+  height: 300px;
+  width: 80%;
+  padding: 1rem;
+  box-sizing: border-box;
+  & h1 h2 h3{
+    text-shadow: #000 0 0 2px 2px;
+  }
+
+}
+
+.site-header {
+  background-color: #141824;
+  padding: 1rem;
+  box-sizing: border-box;
+  min-height: $spacing-unit * 1.865;
+  line-height: $base-line-height * $base-font-size * 2.25;
+  // Positioning context for the mobile navigation icon
+  position: relative;
+  text-shadow: 1px 1px 4px #000;
+
+}
+
+.title-content {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.site-title {
+  @include relative-font-size(3);
+  font-weight: 300;
+  letter-spacing: -1px;
+  margin-bottom: 0;
+
+  @include media-query($on-palm) {
+    padding-right: 45px;
+  }
+
+  &,
+  &:visited {
+    color: #fff;
+  }
+}
+
+.site-nav {
+  position: absolute;
+  top: 9px;
+  right: $spacing-unit / 2;
+  background-color: $background-color;
+  border: 1px solid $grey-color-light;
+  border-radius: 5px;
+  text-align: right;
+
+  .nav-trigger {
+      display: none;
+  }
+
+  .menu-icon {
+    float: right;
+    width: 36px;
+    height: 26px;
+    line-height: 0;
+    padding-top: 10px;
+    text-align: center;
+
+    > svg path {
+      fill: $grey-color-dark;
+    }
+  }
+
+  label[for="nav-trigger"] {
+    display: block;
+    float: right;
+    width: 36px;
+    height: 36px;
+    z-index: 2;
+    cursor: pointer;
+  }
+
+  input ~ .trigger {
+    clear: both;
+    display: none;
+  }
+
+  input:checked ~ .trigger {
+    display: block;
+    padding-bottom: 5px;
+  }
+
+  .page-link {
+    color: $text-color;
+    line-height: $base-line-height;
+    display: block;
+    padding: 5px 10px;
+
+    // Gaps between nav items, but not on the last one
+    &:not(:last-child) {
+      margin-right: 0;
+    }
+    margin-left: 20px;
+  }
+
+  @media screen and (min-width: $on-medium) {
+    position: static;
+    float: right;
+    border: none;
+    background-color: inherit;
+
+    label[for="nav-trigger"] {
+      display: none;
+    }
+
+    .menu-icon {
+      display: none;
+    }
+
+    input ~ .trigger {
+      display: block;
+    }
+
+    .page-link {
+      display: inline;
+      padding: 0;
+
+      &:not(:last-child) {
+        margin-right: 20px;
+      }
+      margin-left: auto;
+    }
+  }
 }
