--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
       </div>
 
       <div class="head-nav">
-        <a class="page-link" href="{{ my_page.url | relative_url }}">About</a>
+        <a class="page-link" href="/about/">About</a>
       </div>
     </div>
   </div>
