Use sticky header to tuck away most of the header picture as viewer scrolls

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,14 +1,17 @@
 <header class="site-header">
+  <div class="header-banner">
+    <div class="wrapper">
+      <div class="head-image head-content">
+        <div class="title-content">
+          <a class="site-title" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
+        </div>
 
-  <div class="wrapper">
-    <div class="head-image head-content">
-      <div class="title-content">
-        <a class="site-title" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
-      </div>
-
-      <div class="head-nav">
-        <a class="page-link" href="/about/">About</a>
+        <div class="head-nav">
+          <a class="page-link" href="/about/">About</a>
+        </div>
       </div>
     </div>
   </div>
 </header>
+
+<!-- <div class="headspace"></div> -->
