--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -15,7 +15,6 @@
   border-radius: 15px;
   background-image: url("/assets/images/bigstick-dark.jpg");
   background-size: cover;
-  color: #fefefe;
   // background-position: center;
 }
 
@@ -26,10 +25,23 @@
   padding: 1rem;
   box-sizing: border-box;
   min-height: $spacing-unit * 1.865;
-  text-shadow: 1px 1px 4px #000;
   display: flex;
   justify-content: center;
   box-shadow: 2px 3px 5px 0px rgba(0,0,0,0.4);
+  color: #ececec;
+  text-shadow: 1px 1px 4px #000;
+  a {
+    transition-property: color, text-shadow;
+    transition-duration: 0.1s;
+    transition-timing-function: ease-out;
+  }
+  a:hover {
+    color: #fafafa;
+    text-shadow: 3px 3px 6px #000;
+    transition-property: color, text-shadow;
+    transition-duration: 0.1s;
+    transition-timing-function: ease-in;
+  }
 }
 
 .head-content {
@@ -54,8 +66,7 @@
 .head-nav {
   flex: 0 0 auto;
   text-align: right;
-  color: #fafafa;
-  opacity: 0.75;
+  color: #ececec;
   @include relative-font-size(1.2);
 }
 
@@ -64,4 +75,5 @@
   font-weight: 300;
   letter-spacing: 2px;
   margin-bottom: 0;
+  width: fit-content;
 }
