--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="{{ "/assets/css/reset.css" | relative_url }}">
   <link rel="stylesheet" href="{{ "/assets/css/normalize.css" | relative_url }}">
   <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
+  <link href="https://fonts.googleapis.com/css?family=Lato|Raleway&display=swap" rel="stylesheet">
   {%- feed_meta -%}
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
     {%- include google-analytics.html -%}
