Center background image in header x-axis only

--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -15,7 +15,7 @@
   border-radius: 15px;
   background-image: url("/assets/images/bigstick-dark.jpg");
   background-size: cover;
-  // background-position: center;
+  background-position: center top;
 }
 
 .header-banner {
