--- a/_sass/abigstick.scss
+++ b/_sass/abigstick.scss
@@ -19,3 +19,16 @@
   box-shadow: 1px 2px 5px 0px rgba(0,0,0,0.2);
   padding: 15px 30px;
 }
+
+a {
+  transition-property: color, text-shadow;
+  transition-duration: 0.1s;
+  transition-timing-function: ease-out;
+}
+a:hover {
+  color: #555;
+  text-shadow: 2px 2px 3px #0003;
+  transition-property: text-shadow;
+  transition-duration: 0.1s;
+  transition-timing-function: ease-in;
+}
