--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -35,6 +35,7 @@
   color: #ececec;
   text-shadow: 1px 1px 4px #000;
   a {
+    text-decoration: none;
     transition-property: color, text-shadow;
     transition-duration: 0.1s;
     transition-timing-function: ease-out;
