--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -26,9 +26,9 @@ a{color:inherit; cursor:pointer;}
 body {
 	line-height: 1;
 }
-ol, ul {
+/* ol, ul {
 	list-style: none;
-}
+} */
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
