bduget-slacker: handle_slack_message

--- a/_includes/post_image.html
+++ b/_includes/post_image.html
@@ -1,5 +1,5 @@
 <img
-  class="post-image"
+  class="post-image {{include.class}}"
   src="{{site.url}}/assets/images/posts/{{page.id | slugify}}/{{include.name}}"
   style="width: {{include.width}};"
   alt="{{include.alt}}"
