Fix code block style

--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -44,7 +44,7 @@ const formattedDate = date.toLocaleDateString('en-US', {
       prose-a:text-[var(--color-brand)] prose-a:no-underline hover:prose-a:underline
       prose-code:before:content-none prose-code:after:content-none
       prose-code:bg-gray-100 prose-code:px-1.5 prose-code:py-0.5 prose-code:rounded prose-code:text-sm
-      prose-pre:bg-gray-900 prose-pre:rounded-lg
+      prose-pre:rounded-lg
       prose-img:rounded-lg prose-img:shadow-md">
       <slot />
     </div>
