--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,16 +35,19 @@ const displayPosts = posts.slice(0, POSTS_PER_PAGE);
               {post.data.title}
             </h2>
             <p class="text-[var(--color-text-light)] mt-1">{post.data.description}</p>
-            {post.data.tags.length > 0 && (
-              <div class="flex flex-wrap gap-1.5 mt-2">
-                {post.data.tags.map((tag: string) => (
-                  <span class="inline-block px-2 py-0.5 bg-[var(--color-brand-light)] text-[var(--color-brand)] rounded text-xs">
-                    {tag}
-                  </span>
-                ))}
-              </div>
-            )}
           </a>
+          {post.data.tags.length > 0 && (
+            <div class="flex flex-wrap gap-1.5 mt-2">
+              {post.data.tags.map((tag: string) => (
+                <a
+                  href={`/tags/${tag.toLowerCase()}`}
+                  class="inline-block px-2 py-0.5 bg-[var(--color-brand-light)] text-[var(--color-brand)] rounded text-xs no-underline hover:bg-[var(--color-brand)] hover:text-white transition-colors"
+                >
+                  {tag}
+                </a>
+              ))}
+            </div>
+          )}
         </li>
       );
     })}
